service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: gitops-demo-app
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
